--- a/administrator/AbsensiMesinPegawaiDetails.html
+++ b/administrator/AbsensiMesinPegawaiDetails.html
@@ -298,9 +298,14 @@
                                     <td class="wd-100p">Katherine Lumaad, S.Kom.</td>
                                 </tr>
                                 <tr>
+                                    <td class="tx-bold wd-20p">Jenis Pegawai</td>
+                                    <td class="text-center">:</td>
+                                    <td class="wd-100p">PPPK Penuh Waktu</td>
+                                </tr>
+                                <tr>
                                     <td class="tx-bold wd-20p">Satuan Organisasi</td>
                                     <td class="text-center">:</td>
-                                    <td class="wd-100p">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia</td>
+                                    <td class="wd-100p">Dinas Pendidikan</td>
                                 </tr>
                                 <tr>
                                     <td class="tx-bold wd-20p">Unit Kerja</td>
