--- a/administrator/AgendaDetailPegawai.html
+++ b/administrator/AgendaDetailPegawai.html
@@ -204,18 +204,18 @@
 
                     <!-- Monitoring Absensi -->
                     <li class="nav-label mg-t-25">Monitoring Absensi</li>
+                    <li class="nav-item with-sub">
+                        <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
+                        <ul>
+                            <li><a href="ShiftUtama.html">Shift Utama</a></li>
+                            <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item with-sub active show">
                         <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
                         <ul>
                             <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
                             <li class="active"><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="clock"></i> <span>Jadwal Pegawai</span></a>
-                        <ul>
-                            <li><a href="JadwalUtama.html">Jadwal Utama</a></li>
-                            <li><a href="JadwalTambahan.html">Jadwal Tambahan</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -297,7 +297,7 @@
                                 <tr>
                                     <td class="tx-bold wd-20p">Satuan Organisasi</td>
                                     <td class="text-center">:</td>
-                                    <td class="wd-100p">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia</td>
+                                    <td class="wd-100p">Dinas Pendidikan</td>
                                 </tr>
                                 <tr>
                                     <td class="tx-bold wd-20p">Unit Kerja</td>
