--- a/administrator/LaporanBulanan.html
+++ b/administrator/LaporanBulanan.html
@@ -436,7 +436,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-label="List Laporan Presensi Bulanan" class="df-example demo-table">
+                            <div data-label="Laporan Absensi Bulanan" class="df-example demo-table">
                                 <div class="table-responsive">
                                     <table id="datatables" class="table table-hover table-bordered" style="width: 100%;">
                                         <thead class="thead-primary">
