--- a/administrator/PengajuanSakit.html
+++ b/administrator/PengajuanSakit.html
@@ -111,14 +111,14 @@
                         <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
                     </li>
                     <!-- Pengaturan -->
-          <li class="nav-label mg-t-25">Pengaturan</li>
-          <li class="nav-item">
-            <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
-          </li>
-          <li class="nav-item">
-            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
-          </li>
-          <!-- DATA MASTER KEPEGAWAIAN -->
+                    <li class="nav-label mg-t-25">Pengaturan</li>
+                    <li class="nav-item">
+                        <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
+                    </li>
+                    <!-- DATA MASTER KEPEGAWAIAN -->
                     <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
                     <li class="nav-item">
                         <a href="data-pegawai.html" class="nav-link"><i data-feather="user-plus"></i> <span>Pegawai ASN</span></a>
@@ -142,13 +142,13 @@
                         <a href="TugasTambahan.html" class="nav-link"><i data-feather="file-plus"></i> <span>Tugas Tambahan</span></a>
                     </li>
                     <li class="nav-item">
-            <a href="MutasiPegawai.html" class="nav-link"><i data-feather="repeat"></i> <span>Mutasi Pegawai</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="OperatorPD.html" class="nav-link"><i data-feather="users"></i> <span>Operator PD</span></a>
-          </li>
+                        <a href="MutasiPegawai.html" class="nav-link"><i data-feather="repeat"></i> <span>Mutasi Pegawai</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="OperatorPD.html" class="nav-link"><i data-feather="users"></i> <span>Operator PD</span></a>
+                    </li>
 
-          <!-- Master Absensi-->
+                    <!-- Master Absensi-->
                     <li class="nav-label mg-t-25">Master Absensi</li>
                     <li class="nav-item">
                         <a href="TipeKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Tipe Kerja</span></a>
@@ -190,39 +190,6 @@
                             <li><a href="RekapIzinPegawai.html">Rekap Izin Pegawai</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a>
-                        <ul>
-                            <li><a href="PengajuanSakit.html">Pengajuan</a></li>
-                            <li><a href="RekapSakitSKPD.html">Rekap Sakit SKPD</a></li>
-                            <li><a href="RekapSakitPegawai.html">Rekap Sakit Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a>
-                        <ul>
-                            <li><a href="PengajuanCuti.html">Pengajuan</a></li>
-                            <li><a href="RekapCutiSKPD.html">Rekap Cuti SKPD</a></li>
-                            <li><a href="RekapCutiPegawai.html">Rekap Cuti Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
-                        <ul>
-                            <li><a href="PengajuanDinas.html">Pengajuan</a></li>
-                            <li><a href="RekapDinasSKPD.html">Rekap Dinas SKPD</a></li>
-                            <li><a href="RekapDinasPegawai.html">Rekap Dinas Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin</span></a>
-                        <ul>
-                            <li><a href="PengajuanIzin.html">Pengajuan</a></li>
-                            <li><a href="RekapIzinSKPD.html">Rekap Izin SKPD</a></li>
-                            <li><a href="RekapIzinPegawai.html">Rekap Izin Pegawai</a></li>
-                        </ul>
-                    </li>
                     <li class="nav-item with-sub active show">
                         <a href="" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a>
                         <ul>
@@ -243,19 +210,19 @@
                     <!-- Monitoring Absensi -->
                     <li class="nav-label mg-t-25">Monitoring Absensi</li>
                     <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
-            <ul>
-              <li><a href="ShiftUtama.html">Shift Utama</a></li>
-              <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
-            </ul>
-          </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
-            <ul>
-              <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
-              <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
-            </ul>
-          </li>
+                        <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
+                        <ul>
+                        <li><a href="ShiftUtama.html">Shift Utama</a></li>
+                        <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item with-sub">
+                        <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
+                        <ul>
+                        <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
+                        <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
                         <a href="KeluarKantor.html" class="nav-link"><i data-feather="external-link"></i> <span>Keluar Kantor</span></a>
                     </li>
@@ -686,7 +653,7 @@
 
                 flatpickr("#Tanggal", {
                     mode: "multiple",       // ⬅️ untuk multi tanggal
-                    dateFormat: "Y-m-d",    // format tanggal
+                    dateFormat: "d-m-Y",    // format tanggal
                 });
 
                 // Select2
