--- a/administrator/ShiftTambahan.html
+++ b/administrator/ShiftTambahan.html
@@ -515,7 +515,7 @@
                                                 <p class="tx-12 mg-b-10">196708142001121002</p>
                                             </td>
                                             <td class="text-start">PNS</td>
-                                            <td class="text-start">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia - Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
+                                            <td class="text-start">Dinas Pendidikan - Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
                                             <td>
                                                 Dinas Kantor
                                             </td>
