--- a/administrator/data-pegawai.html
+++ b/administrator/data-pegawai.html
@@ -550,7 +550,7 @@
                                                                 </div>
                                                                 <div class="col-sm-7 mg-b-15">
                                                                     <h6 class="mg-0">Satuan Organisasi</h6>
-                                                                    <span>Badan Kepegawaian dan Pengembangan Sumber Daya Manusia</span>
+                                                                    <span>Dinas Pendidikan</span>
                                                                 </div>
                                                                 <div class="col-sm-5 mg-b-15">
                                                                     <h6 class="mg-0">Unit Kerja</h6>
