--- a/administrator/LaporanBulananPegawai.html
+++ b/administrator/LaporanBulananPegawai.html
@@ -297,7 +297,7 @@
                                 <tr>
                                     <td class="tx-bold wd-20p">Satuan Organisasi</td>
                                     <td class="text-center">:</td>
-                                    <td class="wd-100p">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia</td>
+                                    <td class="wd-100p">Dinas Pendidikan</td>
                                 </tr>
                                 <tr>
                                     <td class="tx-bold wd-20p">Unit Kerja</td>
