--- a/administrator/MutasiPegawai.html
+++ b/administrator/MutasiPegawai.html
@@ -111,14 +111,14 @@
                         <a href="statistik-pegawai.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a>
                     </li>
                     <!-- Pengaturan -->
-          <li class="nav-label mg-t-25">Pengaturan</li>
-          <li class="nav-item">
-            <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
-          </li>
-          <li class="nav-item">
-            <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
-          </li>
-          <!-- DATA MASTER KEPEGAWAIAN -->
+                    <li class="nav-label mg-t-25">Pengaturan</li>
+                    <li class="nav-item">
+                        <a href="pengumuman.html" class="nav-link"><i data-feather="bell"></i> <span>Pengumuman </span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="API-Kepegawaian.html" class="nav-link"><i data-feather="link-2"></i> <span>API Kepegawaian </span></a>
+                    </li>
+                    <!-- DATA MASTER KEPEGAWAIAN -->
                     <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
                     <li class="nav-item">
                         <a href="data-pegawai.html" class="nav-link"><i data-feather="user-plus"></i> <span>Pegawai ASN</span></a>
@@ -141,10 +141,10 @@
                     <li class="nav-item">
                         <a href="TugasTambahan.html" class="nav-link"><i data-feather="file-plus"></i> <span>Tugas Tambahan</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="MutasiPegawai.html" class="nav-link"><i data-feather="repeat"></i> <span>Mutasi Pegawai</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="OperatorPD.html" class="nav-link"><i data-feather="users"></i> <span>Operator PD</span></a>
                     </li>
 
@@ -173,39 +173,6 @@
                     </li>
 
                     <!-- Pengajuan Ketidakhadiran -->
-                    <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
-                        <ul>
-                            <li><a href="PengajuanDinas.html">Pengajuan</a></li>
-                            <li><a href="RekapDinasSKPD.html">Rekap Dinas SKPD</a></li>
-                            <li><a href="RekapDinasPegawai.html">Rekap Dinas Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin</span></a>
-                        <ul>
-                            <li><a href="PengajuanIzin.html">Pengajuan</a></li>
-                            <li><a href="RekapIzinSKPD.html">Rekap Izin SKPD</a></li>
-                            <li><a href="RekapIzinPegawai.html">Rekap Izin Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a>
-                        <ul>
-                            <li><a href="PengajuanSakit.html">Pengajuan</a></li>
-                            <li><a href="RekapSakitSKPD.html">Rekap Sakit SKPD</a></li>
-                            <li><a href="RekapSakitPegawai.html">Rekap Sakit Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a>
-                        <ul>
-                            <li><a href="PengajuanCuti.html">Pengajuan</a></li>
-                            <li><a href="RekapCutiSKPD.html">Rekap Cuti SKPD</a></li>
-                            <li><a href="RekapCutiPegawai.html">Rekap Cuti Pegawai</a></li>
-                        </ul>
-                    </li>
                     <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
                     <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
@@ -315,14 +282,13 @@
                                 <button class="btn btn-sm pd-x-15 btn-outline-primary btn-uppercase" data-bs-toggle="modal" data-bs-target="#ModalImport"><i data-feather="upload" class="wd-10"></i></button>
                                 <button class="btn btn-sm pd-x-15 btn-outline-success btn-uppercase"><i data-feather="file-text" class="wd-10"></i></button>
                             </div>
-                            <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase mg-l-5" data-bs-toggle="modal" data-bs-target="#ModalTambah"><i data-feather="plus-circle" class="wd-10 mg-r-5"></i> Tambah Data</button>
                         </div>
                     </div>
                     <div class="modal fade" id="ModalTambah" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4" aria-hidden="true" data-bs-backdrop="static">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content tx-14">
                                 <div class="modal-header">
-                                    <h6 class="modal-title tx-bold" id="exampleModalLabel4">Tambah Mutasi Pegawai</h6>
+                                    <h6 class="modal-title tx-bold" id="exampleModalLabel4">Edit Mutasi Pegawai</h6>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true"></span>
                                     </button>
@@ -349,6 +315,12 @@
                                             <label for="JabatanAwal" class="col-sm-3 col-form-label tx-bold">Jabatan Awal <span class="tx-danger">*</span></label>
                                             <div class="col-sm-9">
                                                 <input type="text" class="form-control" id="JabatanAwal" value="Analis Sumber Daya Manusia Aparatur Ahli Muda" readonly />
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label for="TMTMutasi" class="col-sm-3 col-form-label tx-bold">TMT Mutasi <span class="tx-danger">*</span></label>
+                                            <div class="col-sm-9">
+                                                <input type="text" class="form-control" id="Tanggal" placeholder="Pilih Tanggal TMT Mutasi" required />
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -448,6 +420,7 @@
                                             <th>Nama Pegawai</th>
                                             <th>Jenis Pegawai</th>
                                             <th>SKPD Awal</th>
+                                            <th>TMT Mutasi</th>
                                             <th>SKPD Tujuan</th>
                                             <th>Lampiran Dokumen</th>
                                             <th>Aksi</th>
@@ -462,7 +435,8 @@
                                             </td>
                                             <td class="text-start">PNS</td>
                                             <td class="text-start">Dinas Pendidikan - Kepala Dinas Pendidikan</td>
-                                            <td class="text-start">Dinas Kesehatan - Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
+                                            <td class="text-start">10/08/2025</td>
+                                            <td class="text-start">Dinas Kesehatan - Analis Sumber Daya Manusia Aparatur Ahli Utama</td>
                                             <td>
                                                 <span class="tx-medium d-flex align-items-center gap-1 text-decoration-line-through tx-primary ">Lihat Dokumen</span>
                                             </td>
@@ -541,6 +515,10 @@
                     searchInputPlaceholder: "Pencarian",
                     width: "100%",
                     dropdownParent: $("#ModalTambah"),
+                });
+
+                flatpickr("#Tanggal", {
+                    dateFormat: "Y-m-d",    // format tanggal
                 });
 
                 // Select2
